Add functionality, tests and improve architecture
- Tables can now have a schema
- Retrieving tables and columns can now be delegated using the template method pattern if necessary